# aygentx-smart-search

./: .gitignore  DEPLOYMENT-GUIDE.md  LICENSE  README.md  add_loggers.py  event.json  fix_voice.py  fuzzy-front-end.html  main.py  patch_html.py  patch_v2.py  patch_voice.py  pyproject.toml  requirements.txt  setup.py  template.py  template.yaml  test_query.py
.aws-sam/: build.toml
.github/workflows/: deploy.yml
app/agent/: memory.py  router.py
app/api/: dependencies.py  endpoints.py  mcp_server.py  rag_endpoints.py  server.py  voice_endpoints.py
app/constants/: __init__.py
app/core/: config.py  logging.py
app/db/: connection.py
app/llm/: base.py  client.py  factory.py  openrouter_client.py
app/models/: schema.yml
app/models/pydantic/: schemas.py
app/prompts/: prompts.yaml
app/services/: query_service.py  rag_service.py
app/utils/: __init__.py
