[project]
name = "AygentX-Smart-Search"
version = "0.1.0"
description = "AygentX Smart Search - It is a FastAPI-based AI backend that dynamically routes queries between SQL Retrieval and Agentic RAG to deliver precise, context-aware results. It supports real-time voice interaction and is deployed on AWS Lambda for scalable, serverless performance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.135.3",
    "google-genai>=1.73.0",
    "mangum>=0.21.0",
    "mcp>=1.27.0",
    "openai>=2.31.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]
